fix(modal): improve responsiveness and alignment across viewports

--- a/pass_frontend/src/app/globals.css
+++ b/pass_frontend/src/app/globals.css
@@ -4,11 +4,6 @@
 
 @custom-variant dark (&:is(.dark *));
 
-
-*{
-  box-sizing: border-box;
-  overflow-x: hidden;
-}
 @layer utilities {
   /* Ocultar a barra de rolagem */
   .scrollbar-hidden {
